--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -20,7 +20,7 @@ body {
 
 .log-in {
   color:white;
-  background: linear-gradient(#6c90ad, #4a7598);
+  background: #4a7598;
   border: 1px solid #1c5380;
   border-radius: 2px;
   float: right;
