--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,41 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
-body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
-}
+  body {
+    font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+  }
+  .header{
+      background-image: url("../images/bgtile.png");
+      weight: 100%;
+      background-repeat: repeat-x;
+    }
+  .container{
+    position: relative;
+    top: -200px;
+    margin: auto;
+    float: left;
+    
+  }
+  .bcentral2{
+    position: relative;
+    background-repeat: no-repeat;
+    margin: auto;
+    top: -190px;
+    text-align: left;
+    height: 80%;
+  }
+  #home img{
+    height:300px;
+  }
+  .title{
+    color: #06365f;
+  }
+  .footer{
+    color:#0a07c5;
+    
+  }
+  .foot{
+    text-align: left;
+  }
