--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,92 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.top {
+  background-image: url(../images/bgtile.png);
+  width: 100%;
+height: 36vh;
+position: relative;
+}
+
+.fade-box {
+background-image: url(../images/frame.png);
+background-repeat: no-repeat;
+position: relative;
+right: 60px;
+bottom: 80px;
+}
+
+.fade-text{
+  width: 65%;
+  padding-left: 40%;
+  position: relative;
+  bottom: 30px;
+  right: 200px;
+}
+
+.bottom-left{
+float: left;
+width: 45%;
+position: relative;
+bottom: 160px;
+left: 180px;
+
+}
+.bottom-right{
+float: left;
+width: 45%;
+}
+.bottom-links{
+text-align: center;
+margin-left: 10%;
+margin-right: 10%;
+margin-top: 0%;
+margin-bottom: 4%;
+}
+.clearfix{
+  clear: both;
+}
+
+h1 {
+color: #06365f;
+font-size: 20px;
+width: 33vh;
+margin-right: 40px;
+}
+
+.logo{
+  position: relative;
+  float: right;
+  right: 360px;
+  bottom: 150px;
+}
+
+  .btn {
+    background-image: url(../images/bgtile.png);
+    border: 1px solid #06365f;
+    color: white; 
+    padding: 9px 16px; 
+    font-size: 16px; 
+    float: right;
+    position: relative;
+   left: 120px;
+   bottom: 135px;
+  }
+
+  .badges{
+    position: relative;
+    right: 40px;
+    bottom: 80px;
+  }
+  .r-badge{
+    position: relative;
+    left: 8px;
+  }
+
+  .bottom-links a{
+    text-decoration: none;
+    color: #1c5380;
+    font-weight: 500;
+    padding: 0px 10px;
+  }
