--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -12,24 +12,28 @@ body {
 }
 
 .row { 
-  width: 800px;
+  width: 900px;
   display: block;
   margin: auto;
   position: relative;
-  padding-top: 50px;
+  padding: 60px 0px 30px 0px;
 }
 
 .izq {
   float: left;
-    width: 41%;
+    width: 35%;
     height: 500px;
 }
 
 .der {
   float: left;
-    width: 54%;
+    width: 60%;
     margin-left: 5%;
     height: 500px;
+}
+
+.titulo{
+  width: 220px;
 }
 
 .row:after {
@@ -38,13 +42,11 @@ body {
   clear: both;
 }
 
-
 .subRow { 
-  width: 1024px;
   display: block;
   margin: auto;
-  position: relative;
   padding-top: 50px;
+  
 }
 
 .subIzq {
@@ -53,8 +55,9 @@ body {
 }
 
 .subDer {
-  float: left;
+  float: right;
   width: 25%;
+  
 }
 
 .subRow:after {
@@ -63,15 +66,49 @@ body {
   clear: both;
 }
 
-.buttonContainer
-{}
+.downloads {
+  position: absolute;
+  bottom: 0px;
+  padding-bottom: 30px;
+  display: block;
+  width: 100%;
 
+  
+}
+
+.buttonContainer {
+  margin-top: 25px;
+  padding-top: 25px;
+}
+
+.button {
+  vertical-align: middle;
+  height: 40px;
+  width: 90px;
+  background: linear-gradient( #6e90ac , #003569);
+  border-radius: 5px;
+  color: white;
+  border-color: #003569;
+  vertical-align: middle;
+  
+}
+
+.goog {
+  padding-left: 25px;
+  float: left;
+  
+}
+
+.app {
+  float: left;
+  
+}
 
 
 
 .etiqueta {
   background-image: url('../images/frame.png');
-  padding: 30px 30px 30px 30px;
+  padding: 30px 40px 30px 40px;
   background-size: 100%;
   background-repeat: no-repeat;
   
@@ -84,9 +121,7 @@ body {
 
 
 .legal {
-  color: rgba(255,255,255,0.8);
   line-height: 20px;
-  font-size: 16px;
   height: 20px;
   margin: auto;
   width: 800px;
@@ -99,7 +134,6 @@ body {
   clear: left;
   padding: 0;
   margin: 0 20px 0 0;
-  font-family: apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;;
   font-weight: bold;
   font-size: 14px;
 }
@@ -115,11 +149,32 @@ body {
   clear: left;
 }
 
+.top-links li a{
+  text-decoration: none;
+  font-size: 14px;
+  color: #003569;
 
 
+}
 
+p {
+  font-size: 14px;
+  font-weight: normal;
+}
+
+
+h2 {
+  font-size: 21px;
+  text-transform: initial;
+  color: #003569;
+
+}
 
 h3 {
   font-size: 14px;
   text-transform: initial;
+  color: grey;
+
 }
+
+
