--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,3 +1,18 @@
+/* ---- reset ---- */
+
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+
 /*
 Colors to use:
 dark blue: #06365f
@@ -7,4 +22,101 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  
+}
+
+header {
+  background-image: url("../images/bgtile.png");
+  background-position: center;
+	background-size: cover;
+  background-repeat: repeat;
+  height: 300px;
+  margin-bottom: -200px;
+}
+
+.container {
+  max-width: 950px;
+  margin: 0 auto;
+}
+
+
+.main-image{
+  float: left;
+}
+
+.main-content{
+  float: right;
+  width: 60%;
+  
+}
+
+footer {
+  text-align: center;
+  margin-bottom: 50px;
+  text-transform: uppercase;
+}
+
+.text {
+  background-image: url("../images/frame.png");
+  background-size: 90%;
+  background-repeat: no-repeat;
+  background-position: center top;
+  padding: 20px 70px;
+}
+
+#main {
+  overflow: hidden;
+  margin-bottom: 50px;
+}
+
+h2 {
+  padding-right: 160px;
+  color: #06365f;
+}
+
+.login{
+  padding-top: 20px;
+  margin-bottom: 15px;
+  margin-left: 30px;
+}
+
+footer li {
+  display: inline;
+  padding-right: 10px;
+  font-size: 14px;
+  color: #808080;
+}
+
+footer a {
+  text-decoration: none;
+  color: #1c5380;
+}
+
+.badge {
+  margin-right: 20px;
+}
+
+.login button {
+  float: right;
+  vertical-align: middle;
+  color: white;
+  background-color: #307bb8;
+  border-radius: 4px;
+  border: 1px solid #06365f;
+  margin: 20px 35px 0 0;
+  padding: 15px 10px 10px 40px;
+  font-weight: bold;
+  background: url("../images/home.png") no-repeat 10px center;
+}
+
+.text p{
+  font-size: 14px;
+}
+
+.apps {
+  padding-top: 20px;
+}
+
+.login button img {
+  margin-right: 10px;
 }
