--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,102 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -10;
+  width: 100%;
+  height: 40vh;
+  background-color: #1c5380;
+}
+
+.content {
+  width: 80%;
+  max-width: 800px;
+  margin: 100px auto 50px;
+}
+
+.celular {
+  width: 36%;
+  margin: 0 2%;
+  display: inline-block;
+}
+
+.sub-container {
+  width: 54%;
+  margin:0;
+  padding: 0 2%;
+  display: inline-block;
+}
+
+.title {
+  width:100%;
+}
+
+.brand {
+  width: 70%;
+  margin: 0 5% auto 0;
+  vertical-align: middle;
+}
+
+.button{
+  display: inline-block;
+  width: 20%;
+  border: 1px solid #06365f;
+  border-radius: 2px;
+  text-align: center;
+  padding: 5px 0;
+  background-color: #1c53cc;
+}
+
+.ico-home {
+  vertical-align: middle;
+}
+
+.log-in{
+  color: #ffffff;
+  font-size: 10pt;
+}
+
+.text-box {
+  background: url("../images/frame.png") top left no-repeat;
+  background-size: 100%;
+  padding: 10px 20px;
+}
+
+.bold {
+  font-weight: bold;
+}
+
+h2 {
+  color: #06365f;
+  width: 70%;
+}
+
+.badge {
+  width: 45%;
+}
+
+.footer ul {
+  display: block;
+  text-align: center;
+}
+
+.footer ul li {
+  display: inline-block;
+  list-style: none;
+  margin: 0 5px;
+  font-weight: bold;
+  color: #1c5380;
+  text-transform: uppercase;
+  font-size: 0.7em;
+}
+
+.light {
+  color: #000000;
+  font-weight: 200;
+}
+
+
