--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,128 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.overlord {
+  position: relative;
+}
+
+
+.tophalf {
+  background-color: #1c5380;
+  height: 290px;
+  width: 100%;
+}
+
+
+.instagram_logo {
+  position: relative;
+  right: 0px;
+  top: -90px;
+}
+
+.home_button {
+  border: 2px solid rgba(0,0,0,0.2);
+  border-radius: 3px;
+  background-color: #1c5380;
+  position: relative;
+  bottom: 64px;
+  left: 414px;
+  width: 80px;
+  height: 38px;
+}
+
+.home_button>button {
+  background-color: #1c5380;
+  border: 0px;
+  color: white;
+}
+
+.home_button>img {
+  position: relative;
+  top: 6px;
+  left: 5px;
+}
+
+.iphone_photo {
+  display: float;
+  float: left;
+  position: relative; 
+  bottom: 175px;
+  left: 125px;
+
+}
+
+.instagram_info { 
+  
+  background-image: url(../images/frame.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  display: float;
+  float: right;
+  max-width: 500px;
+  position: relative;
+  right: 100px;
+  bottom: 80px;
+}
+
+
+.instagram_info>h1{
+  color: #06365f;
+  width: 60%;
+  position: relative;
+  left: 40px;
+  top: -100px;
+  font-size: 1.8em;
+  line-height: 35px;
+  
+}
+
+.instagram_info>p{
+  width: 85%;
+  position: relative;
+  left: 40px;
+  top: -100px;
+}
+
+#bottomp {
+  margin-bottom: 35px;
+}
+
+.instagram_info>img {
+  position: relative;
+  left: 40px;
+  top: -100px;
+  margin: 0 8px 0 8px;
+}
+
+.floor {
+  clear: both;
+  width: 900px;
+  height: 20px;
+  text-align: center;
+  position: relative;
+  left: 80px;
+  top: -100px;
+}
+
+.floor span {
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+  .floor span a {
+    text-decoration: none;
+  }
+
+  .floor p {
+    display: inline-block;
+    margin: 3px;
+
+  }
+
+  
