--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,162 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
-body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+* {
+  padding: 0;
   margin: 0;
+  font: 200 18px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+/* TOP HALF OF PAGE */
+
+.top {
+  background-image: url("../images/bgtile.png");
+  height: 300px;
+  position: relative;
+}
+
+button {
+  background-color: #1c5380;
+}
+
+.top-container {
+  float:right;
+  width: 55%;
+  vertical-align: middle;
+}
+
+.top-indented-container {
+  padding-right: 30%;
+  padding-top: 100px;
+}
+
+.instagram-icon {
+
+}
+
+.instagram-name {
+  display: inline-block;
+  float: left;
+}
+
+.login-button {
+  display: inline-block;
+  float: right;
+  position: relative;
+  top: 15px;
+}
+
+.login-button img {
+  height: 50px;
+}
+
+/* BOTTOM HALF OF PAGE */
+
+.bottom {
+  height: 380px;
+  margin-bottom: 50px;
+}
+
+.left-half {
+  float: left;
+  width: 45%;
+  height: 380px;
+}
+
+.left-half img {
+  float:right;
+  position: relative;
+  bottom: 220px;
+  right: 50px;
+  height: 600px;
+}
+
+.right-half {
+  float: right;
+  width: 55%;
+  height: 380px;
+}
+
+.text-container {
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  margin-right: 25%;
+  position: relative;
+  bottom: 100px;
+}
+
+.sub-text-container {
+  padding: 35px 50px 35px 35px;
+}
+
+.bolded {
+  font-weight: bold;
+}
+
+.header {
+  margin-bottom: 20px;
+  padding-right: 180px;
+}
+
+.header h1 {
+  font-weight: 700;
+  font-size: 25px;
+  color: #06365f;
+}
+
+.copy {
+  margin-bottom: 40px;
+}
+
+.copy p {
+  margin-bottom: 10px;
+  letter-spacing: .5px;
+}
+
+.apps-container {
+
+}
+
+.apps-container img {
+  height: 60px;
+  margin-right: 15px;
+}
+
+.app-store {
+  display: inline-block;
+}
+
+.google-play {
+  display: inline-block;
+}
+
+footer {
+  clear: both;
+  margin: 0 auto;
+  width: 100%;
+  margin-bottom: 50px;
+}
+
+.footer {
+  margin: 0 auto;
+  width: 50%;
+  text-transform: uppercase;
+}
+
+.footer-ul {
+  list-style: none;
+}
+
+.footer-ul li {
+  display: inline;
+  margin-right: 15px;
+  font-size: 12px;
+  font-weight: 700;
+  color: #1c5380;
+}
+
+.copyright {
+  color: grey;
+  font-size: 12px;
+  font-weight: 700;
 }
