--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,10 +1,106 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
-
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.blueTop {
+  width: 100%;
+  height: 300px;
+  background: linear-gradient(rgba(58, 104, 144, 0), rgb(41, 73, 102)), url("../images/bgtile.png");
+}
+
+.contnetBox {
+  margin-left: 100px;
+  margin-top: -100px;
+
+}
+
+.phonePic {
+  float: left;
+  margin-left: 235px;
+  margin-top: -180px;
+}
+
+.brandBox {
+  width: 500px;
+  float: right;
+  margin-right: 375px;
+  margin-top: -170px;
+}
+
+.brandImg {
+  float: left;
+}
+
+/* COULDN'T QUITE FIGURE OUT FORMATTING THE BUTTON */
+.btnLogin {
+  height: 40px;
+  width: 90px;
+  background:    -webkit-linear-gradient(rgb(73, 130, 184), rgb(41, 73, 102));
+  border-radius: 3px;
+  border-color: rgb(67, 117, 161);
+  padding: 5px;
+  color: #ffffff;
+  font: normal 700 30px/1;
+  text-align: center;
+  text-shadow: 1px 1px #000000;
+  margin-left: 5%;
+  margin-top: 20px;
+  float: right;
+  font-weight: bold;
+}
+
+.textBox {
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  width: 500px;
+  float: right;
+  margin-right: 375px;
+  margin-top: -75px;
+}
+
+.textContent {
+  padding: 20px 50px;
+}
+
+.textBox h2 {
+  color: rgb(32, 70, 104);
+}
+
+.textBox p {
+  font-size: 15px;
+}
+
+.badges {
+  padding-left: 50px;
+  width: 500px;
+}
+
+.badgeIphone {
+  padding-right: 25px;
+}
+ 
+.badgeAndriod {
+}
+
+footer {
+  clear: both;
+  padding-top: 50px;
+  font-size: 10px;
+  margin-left: 350px;
+}
+
+.footerList li {
+  text-transform: uppercase;
+  font-weight: bold;
+  color: rgb(71, 127, 177);
+  list-style-type: none;
+  display: inline;
+  padding: 10px;
+}
+
+.footerList span {
+  color: rgb(170, 170, 170);
+}
+
+
