--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -10,7 +10,10 @@ body {
 }
 
 .container {
+  background-color: #06365f;
   width: 100%;
+  padding-left: 20%;
+  padding-top: 20%;
 }
 
 .phone-image {
@@ -18,30 +21,39 @@ body {
   background-repeat: no-repeat;
   width: 50%;
   height: 500px;
-  float: left;
+}
+
+#phones {
+    vertical-align: middle;
+    float: left;
 }
 
 .right-content {
-  float: right;
-
+  width: 400px;
+  height: 450px;
+  background-color: white; 
+  color: #1c5380;
+  float: left;
+  padding-left: 80px;
 }
 
-.right-content #apple {
-
-}
-
-.right-content #android {
+.right-content #apple, #android {
+  padding-left: 20px;
+  padding-bottom: 20px;
 
 }
 
 footer {
-  position: relative;
+  color: #06365f;
+  font-size: 18px;
+  padding: 0 20px;
+  position: absolute;
+    top: 850px;
+    left: 300px;
+    bottom: 100px;
 }
 
 footer a {
-
-}
-
-footer p {
-
+  text-decoration: none;
+  padding-left: 20px;
 }
